# kdk

./: .gitignore  CHANGELOG.md  README.md  make_binaries.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: make_icon.py  update_kodi_refs.py
src/kdk/: __init__.py  __main__.py  config.py  core.py
src/kdk/data/: kodi_builtin_controls.xml  kodi_infolabel_functions.json
src/kdk/data/omega/: controls.xml  data.xml  windows.json
src/kdk/data/piers/: controls.xml  windows.json
src/kdk/gui/: __main__.py  app.py
src/kdk/libs/: kodi_refs.py
src/kdk/libs/addon/: __init__.py  addon.py  translations.py
src/kdk/libs/infoprovider/: __init__.py  checker.py  loader.py  provider.py
src/kdk/libs/polib/: __init__.py  polib.py
src/kdk/libs/reporting/: __init__.py  text.py
src/kdk/libs/skin/: __init__.py  include.py  index.py  maps.py  resolution.py  resources.py  skin.py  textures.py
src/kdk/libs/utils/: __init__.py  colors.py  debug.py  expressions.py  files.py  images.py  infobool.py  validation.py  xml.py
src/kdk/libs/validation/: __init__.py  constants.py  expression.py  filecheck.py  font.py  hierarchy.py  ids.py  image.py  include.py  interpreter.py  label.py  variable.py
tests/fixtures/clean_skin/: addon.xml
tests/fixtures/clean_skin/resources/language/resource.language.en_gb/: strings.po
tests/fixtures/clean_skin/resources/skins/Default/720p/: Font.xml  Home.xml
